Improve appointment management UI and documentation